syntax = "proto3";

option csharp_namespace = "GrpcHelloWorldServer";

package helloworld;

service HelloService {
	rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
}
